locktree/tests/compilefail/locking_out_of_sequence.stderr
error[E0599]: no method named `lock_m1` found for struct `MainLockTreeM2<'_>` in the current scope
  --> $DIR/locking_out_of_sequence.rs:16:23
   |
3  | locktree! {
   | --------- method `lock_m1` not found for this
...
16 |     let _ = forward_b.lock_m1();
   |                       ^^^^^^^ method not found in `MainLockTreeM2<'_>`
